[package]
name = "s3mem"
version = "0.1.0"
edition = "2021"
description = "OKF memory over S3 — portable agent memory as plain files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nonato/s3mem"
readme = "README.md"

[features]
default = []
# The `s3mem` CLI. Off by default so library users don't pull clap.
cli = ["dep:clap"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
regex = "1"

# The S3 backend is always available (the AWS SDK + a Tokio runtime).
aws-config = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
clap = { version = "4", features = ["derive", "env"], optional = true }

[[bin]]
name = "s3mem"
path = "src/bin/s3mem.rs"
required-features = ["cli"]
